--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "lint-staged": "^9.5.0",
     "sass": "^1.25.0",
     "sass-loader": "^8.0.2",
+    "vue-cli-plugin-mock": "^0.0.10",
     "vue-template-compiler": "^2.6.11"
   },
   "eslintConfig": {
