--- a/package.json
+++ b/package.json
@@ -13,16 +13,19 @@
     "changelog": "conventional-changelog -p angular -i CHANGELOG.md -s -r 0"
   },
   "dependencies": {
+    "ans-chart": "^1.0.9",
     "axios": "^0.19.2",
     "better-scroll": "^1.15.2",
     "core-js": "^3.6.4",
     "dayjs": "^1.8.23",
+    "echarts": "^4.7.0",
     "element-ui": "^2.13.0",
     "js-cookie": "^2.2.1",
     "lodash": "^4.17.15",
     "normalize.css": "^8.0.1",
     "nprogress": "^0.2.0",
     "qs": "^6.9.3",
+    "uuid": "^7.0.3",
     "vue": "^2.6.11",
     "vue-router": "^3.1.5",
     "vuex": "^3.1.2"
